交接文档: 36-attach/02 完结(100/152,36 域收官,第 5 批 10/13);§二 表格+commit 清单 17 篇;§五 素材 16 个(新增 36-attach-loadagent-demo.txt);§6.55 新经验(9 组漂移含 3 处编造: JVM_AttachCurrentThread/协议格式/load 半对,自 attach 实证路径);§6 编号修复(6.51 错位→6.50 后);§八 待办 37-heap-dumper/01;§十 下一步